--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     kapt 'com.android.databinding:compiler:2.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'org.jetbrains.anko:anko-sdk23:0.9'
     testCompile 'junit:junit:4.12'
     compile 'com.github.nitrico.lastadapter:lastadapter:1.2.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
