--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.github.GrenderG:Prefs:1.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.jksiezni.permissive:permissive:0.1'
 }
 repositories {
     mavenCentral()
