--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.github.GrenderG:Prefs:1.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.jksiezni.permissive:permissive:0.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
 }
 repositories {
     mavenCentral()
