--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.jksiezni.permissive:permissive:0.1'
     compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.github.dmytrodanylyk.shadow-layout:library:1.0.3'
 }
 repositories {
     mavenCentral()
