내위치 받아오기 설정 페이지 레이아웃 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compile 'com.github.jksiezni.permissive:permissive:0.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.github.dmytrodanylyk.shadow-layout:library:1.0.3'
-
+    compile 'com.yayandroid:LocationManager:1.1.4'
 }
 repositories {
     mavenCentral()
