--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".IntroActivity" />
         <activity android:name=".HelpActivity" />
         <activity android:name=".SettingActivity" />
-        <activity android:name=".BusInfoActivity"></activity>
+        <activity android:name=".BusInfoActivity" />
+        <activity android:name=".BusDetailActivity"></activity>
     </application>
 
 </manifest>
