--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/java-json.jar')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -47,6 +48,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.github.dmytrodanylyk.shadow-layout:library:1.0.3'
     compile 'com.yayandroid:LocationManager:1.1.4'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 }
 repositories {
     mavenCentral()
