--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <application
         android:name=".Application"
         android:allowBackup="true"
-        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -31,7 +31,10 @@
         <activity android:name=".BusInfoActivity" />
         <activity android:name=".BusDetailActivity" />
         <activity android:name=".BusStopInfoActivity" />
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".BusFareSelectActivity" />
+        <activity android:name=".BusFareShowActivity" />
+        <activity android:name=".BusFareSpeakActivity"></activity>
     </application>
 
 </manifest>
