--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.github.dmytrodanylyk.shadow-layout:library:1.0.3'
     compile 'com.yayandroid:LocationManager:1.1.4'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
 }
 repositories {
     mavenCentral()
