--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name=".SearchActivity" />
         <activity android:name=".BusFareSelectActivity" />
         <activity android:name=".BusFareShowActivity" />
-        <activity android:name=".BusFareSpeakActivity"></activity>
+        <activity android:name=".BusFareSpeakActivity" />
     </application>
 
 </manifest>
