--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.yayandroid:LocationManager:1.1.4'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
+    compile 'com.google.code.gson:gson:2.7'
 }
 repositories {
     mavenCentral()
