--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,6 +28,12 @@ android {
     dataBinding {
         enabled true
     }
+
+    dexOptions {
+        jumboMode true
+        javaMaxHeapSize "4g"
+
+    }
 }
 
 dependencies {
@@ -35,13 +42,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    kapt 'com.android.databinding:compiler:2.2.1'
+    compile 'com.android.support:multidex:1.0.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'org.jetbrains.anko:anko-sdk23:0.9'
-    testCompile 'junit:junit:4.12'
     compile 'com.github.nitrico.lastadapter:lastadapter:1.2.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.github.GrenderG:Prefs:1.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.jksiezni.permissive:permissive:0.1'
@@ -51,6 +57,9 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.google.android.gms:play-services-maps:9.6.1'
+    testCompile 'junit:junit:4.12'
+    kapt 'com.android.databinding:compiler:2.2.1'
 }
 repositories {
     mavenCentral()
